analysis for end of visit meeting

--- a/analysis/notebooks/merge_with_meta.ipynb
+++ b/analysis/notebooks/merge_with_meta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,25 +12,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_meta = pd.read_csv('../../accession_lists/Public_AML_RNA_SraRunTable.txt', sep='\\t')"
+    "df_meta = pd.read_csv('../../accession_lists/Public_AML_RNA_SraRunTable.txt', sep='\\t')\n",
+    "df_data = pd.read_csv('../data_files/aml.aml.csv', index_col=0)\n",
+    "output_name = 'aml.meta.mbase_norm.csv'\n",
+    "normalise_with_mbases = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_data = pd.read_csv('../data_files/aml.aml.csv', index_col=0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +267,7 @@
        "aml_aabspliced_SRR1918639.sam.sorted.bam                                  0  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -525,7 +533,7 @@
        "SRR1918639                                  0  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +794,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1027,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1069,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,22 +1080,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "master_df['norm_alignment_count'] = master_df['alignment_count'] / (master_df['MBases'])\n",
-    "master_df['norm_alpha_wt_count'] = master_df['alpha_wt_count'] / (master_df['MBases'])\n",
-    "master_df['norm_alpha_dup_count'] = master_df['alpha_dup_count'] / (master_df['MBases'])\n",
-    "master_df['norm_beta_count'] = master_df['beta_count'] / (master_df['MBases'])\n",
-    "master_df['norm_alpha_read_covers_snps_count_exact'] = master_df['alpha_read_covers_snps_count_exact'] / (master_df['MBases'])\n",
-    "master_df['norm_alpha_dup_read_covers_snps_count_exact'] = master_df['alpha_dup_read_covers_snps_count_exact'] / (master_df['MBases'])\n",
-    "master_df['norm_beta_read_covers_snps_count_exact'] = master_df['beta_read_covers_snps_count_exact'] / (master_df['MBases'])"
+    "if normalise_with_mbases == True:\n",
+    "\n",
+    "\n",
+    "    master_df['norm_alignment_count'] = master_df['alignment_count'] / (master_df['MBases'])\n",
+    "    master_df['norm_alpha_wt_count'] = master_df['alpha_wt_count'] / (master_df['MBases'])\n",
+    "    master_df['norm_alpha_dup_count'] = master_df['alpha_dup_count'] / (master_df['MBases'])\n",
+    "    master_df['norm_beta_count'] = master_df['beta_count'] / (master_df['MBases'])\n",
+    "    master_df['norm_alpha_read_covers_snps_count_exact'] = master_df['alpha_read_covers_snps_count_exact'] / (master_df['MBases'])\n",
+    "    master_df['norm_alpha_dup_read_covers_snps_count_exact'] = master_df['alpha_dup_read_covers_snps_count_exact'] / (master_df['MBases'])\n",
+    "    master_df['norm_beta_read_covers_snps_count_exact'] = master_df['beta_read_covers_snps_count_exact'] / (master_df['MBases'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1345,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,16 +1356,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "master_df.to_csv('aml.meta.mbase_norm.csv')"
+    "master_df.to_csv(output_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1612,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,20 +1623,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.389689978370584"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
